# kotNeuralNetwork

./: LICENSE  kotNeuralNetwork.cabal  stack.yaml
src/: KotNeuralNetwork.hs
src/KotNeuralNetwork/: ActivationFunctions.hs  Feedforward.hs  Internal.hs
test/: Spec.hs  SpecFeedforward.hs
